--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -11,4 +11,5 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 IncludeCrashReporter=True
+UsePakFile=False
 
