--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,23 +18,23 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      packages: write
+      packages: read,write,delete
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+        
+      - name: Log in to the Container registry
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
           
       - name: run docker
         run: | 
-         docker login ghcr.io --username vlussenburg --password ${GHPR_TOKEN}
          docker run --rm -v "${PWD}:/project" ghcr.io/epicgames/unreal-engine:dev-4.27 ./Build.sh
          
-#       - name: Log in to the Container registry
-#         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-#         with:
-#           registry: ${{ env.REGISTRY }}
-#           username: ${{ github.actor }}
-#           password: ${{ secrets.GITHUB_TOKEN }}
           
 #       - name: Extract metadata (tags, labels) for Docker
 #         id: meta
