--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,16 @@ jobs:
           docker rmi $(docker image ls -aq)
           df -h
 
+      - name: Maximize build space
+        uses: easimon/maximize-build-space@master
+        with:
+          root-reserve-mb: 512
+          swap-size-mb: 512
+          remove-dotnet: 'true'
+          remove-haskell: 'true'
+          remove-android: 'true'
+          build-mount-path: /
+
       - name: Checkout
         uses: actions/checkout@v2
 
